# TestAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLEANUP_MANIFEST.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  REGISTER_AGENT.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.1.1.md  RELEASE_NOTES_v3.2.0.md  __init__.py  __main__.py  agent.py  agent_config.json  cli.py  mcp_server.py  model_config.yaml  plugin.yaml  pyproject.toml  requirements.txt  run_mcp.py  test_mcp_server.py
.cursor/rules/: sdk-forge.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pypi.yml  release.yml
.omo/: boulder.json
.omo/notepads/ai-ification/: learnings.md
.omo/plans/: ai-ification.md  register-forge-agent.md
.omo/run-continuation/: ses_125b91cb9ffeBO8GjuaNK6M2Cd.json  ses_129c4ddfdffe20IjPa7JXuwTVG.json
.opencode/agents/: forge-build.md  forge-enrich.md  forge-env.md  forge-oracle.md  forge-review.md  forge-scaffold.md  forge-scan.md  forge.md
.opencode/skills/sdk-forge/: SKILL.md
.opencode/skills/test-agent/: SKILL.md
.opencode/skills/test-forge/: SKILL.md
agents/: __init__.py  agent_defs.py  cache.py  config.py  container_env.py  interactive.py  llm.py  memory.py  models.py  multi_agent.py  pipeline.py
agents/chains/: analysis_chain.py  ci_gen_chain.py  code_gen_chain.py  report_chain.py  scanner_chain.py  test_design_chain.py
agents/prompts/: __init__.py  analysis_prompt.py  builder.py  ci_gen_prompt.py  code_gen_prompt.py  repair_prompt.py  report_prompt.py  scanner_prompt.py  test_design_prompt.py
agents/tools/: code_gen_tools.py  sdk_tools.py
auto_test_agent/: __init__.py
auto_test_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: README.md
docs/: AGENTS.md  CONVENTIONS.md  DELEGATION.md  GITHUB_REPO_RENAME.md  INSTALL.md  INSTALL.zh-CN.md  MIGRATION_v5.11.md  MIGRATION_v5.4.md  PRODUCTION_CHECKLIST.md  README.md  REGISTER_AGENT.md  RELEASE_PROCESS.md  RELIABILITY.md
docs/examples/: oh-my-openagent.multi-agent.json
docs/releases/: RELEASE_NOTES_v2.5.0.md  RELEASE_NOTES_v3.0.9.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.4.0.md  RELEASE_NOTES_v3.5.0.md  RELEASE_NOTES_v3.6.0.md  RELEASE_NOTES_v3.6.1.md  RELEASE_NOTES_v3.6.2.md  RELEASE_NOTES_v4.0.0.md  RELEASE_NOTES_v4.5.2.md  RELEASE_NOTES_v4.6.0.md  RELEASE_NOTES_v5.0.0.md  RELEASE_NOTES_v5.1.0.md  RELEASE_NOTES_v5.10.0.md  RELEASE_NOTES_v5.11.0.md  RELEASE_NOTES_v5.14.0.md  RELEASE_NOTES_v5.2.0.md  RELEASE_NOTES_v5.3.0.md  RELEASE_NOTES_v5.4.0.md  RELEASE_NOTES_v5.5.0.md  RELEASE_NOTES_v5.6.0.md  RELEASE_NOTES_v5.8.0.md  RELEASE_NOTES_v5.9.0.md
examples/: README.md
examples/forge_test_sdk/: .forge.json
examples/test_sdk/: CMakeLists.txt  README.md
examples/test_sdk/examples/: calc_test.cpp
examples/test_sdk/include/: calc.h
examples/test_sdk_cpp/: my_sdkConfig.cmake.in
examples/test_sdk_cpp/include/my_sdk/: api.hpp
examples/test_sdk_medium/include/medium/: core.hpp
examples/yaml_cpp_bench/: .forge.yaml  README.md
examples/yaml_cpp_bench/tests/: add_test.cpp  calculator_test.cpp  clamp_test.cpp  mul_test.cpp  parse_status_test.cpp  status_test.cpp  sub_test.cpp  version_test.cpp
ir/: __init__.py
schemas/: __init__.py  api_schema.py  contract_schema.py  testcase_schema.py
scripts/: apply-sdk-forge-urls.ps1  enable-auto-update.ps1  fix_layer_imports.py  merge-omo-forge-agents.ps1  migrate-rename-sdk-forge.ps1  refactor_layers.py  release.ps1  update-opencode-plugin.ps1  update-opencode-plugin.sh  write_shims.py
sdk_forge/: __init__.py  __main__.py  assertion_quality.py  autopilot.py  bench.py  build.py  cache.py  clean.py  cli.py  codegen.py  config.py  coverage.py  coverage_expand.py  delegate_runner.py  delegation.py  doctor.py  enrich.py  golden.py  gtest.py  hint_actions.py  init.py  learn.py  mock.py  oracle.py  orchestration.py  pipeline.py  plan.py  plan_gap.py  probe.py  profile.py  quality_gate.py  report.py  report_html.py  retry.py  run.py  scan.py  scan_merge.py  session.py  session_nav.py  task_dispatch.py  (+7 more)
sdk_forge/delegation/: __init__.py  core.py  health.py  recovery.py  session_nav.py  task_dispatch.py
sdk_forge/domain/: __init__.py  errors.py  hint_actions.py  plan_gap.py  test_files.py  util.py
sdk_forge/infra/: __init__.py  audit.py  cache.py  clean.py  compdb.py  config.py  doctor.py  gtest.py  learn.py  logging_config.py  profile.py  report.py  report_html.py  response.py  session.py  toolchain.py  toolchain_install.py  trace.py
sdk_forge/orchestration/: __init__.py  autopilot.py  core.py  workflow.py  workflow_advance.py
sdk_forge/pipeline/: __init__.py  assertion_quality.py  bench.py  build.py  codegen.py  core.py  coverage.py  coverage_expand.py  enrich.py  golden.py  init.py  mock.py  oracle.py  plan.py  quality_gate.py  retry.py  run.py  scan.py  scan_merge.py  templates.py  test_fix.py
test_sdk/: README.md
test_sdk/include/: MathUtils.h  StringHelper.h
test_sdk/src/: calc.c
test_sdk_cpp/: CMakeLists.txt  README.md  my_sdk.pc.in
test_sdk_cpp/examples/: api_test.cpp
test_sdk_cpp/src/: api.cpp
test_sdk_medium/: CMakeLists.txt  README.md  medium.pc.in
test_sdk_medium/examples/: medium_test.cpp
test_sdk_medium/include/medium/: net.hpp
test_sdk_medium/src/: core.cpp  net.cpp
tests/: __init__.py  test_all.py  test_integration.py  test_mcp_server.py  test_multi_agent.py  test_reliability.py
