[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-test-forge"
version = "3.5.0"
description = "SDK Test Forge — OpenCode plugin and CLI for automated C/C++ GTest generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["sdk", "test-generation", "gtest", "opencode"]
authors = [
    { name = "SDK Test Forge" },
]

dependencies = [
    "mcp>=1.28.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
clang = ["libclang>=16.0.0"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/weininghui/TestAgent"
Repository = "https://github.com/weininghui/TestAgent"

[project.scripts]
forge-mcp = "mcp_server:main"
forge = "sdk_forge.cli:main"

[tool.setuptools.packages.find]
include = ["sdk_forge*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
