[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-forge"
version = "5.9.0"
description = "SDK Forge — OpenCode plugin and CLI for automated C/C++ GTest generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["sdk", "test-generation", "gtest", "opencode", "sdk-forge"]
authors = [
    { name = "SDK Forge" },
]

dependencies = [
    "mcp>=1.28.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
clang = ["libclang>=16.0.0"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/weininghui/sdk-forge"
Repository = "https://github.com/weininghui/sdk-forge"

[project.scripts]
forge-mcp = "mcp_server:main"
forge = "sdk_forge.cli:main"

[tool.setuptools.packages.find]
include = ["sdk_forge*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
