[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-forge"
version = "5.14.0"
description = "SDK Forge — OpenCode plugin and CLI for automated C/C++ GTest generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["sdk", "test-generation", "gtest", "opencode", "sdk-forge"]
authors = [
    { name = "SDK Forge" },
]

dependencies = [
    "mcp>=1.28.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
clang = ["libclang>=16.0.0"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/weininghui/TestAgent"
Repository = "https://github.com/weininghui/TestAgent"

[project.scripts]
forge-mcp = "mcp_server:main"
forge = "sdk_forge.cli:main"

[tool.setuptools.packages.find]
include = ["sdk_forge*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["sdk_forge", "mcp_server.py", "run_mcp.py", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/test_mcp_server.py" = ["E402"]
